--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<tr>
 		<td width="389">
 		<p align="center">
-		<a href="http://troylily.github.io/web3d/hw0.html">
+		<a href="http://troylily.github.io/3D/hw0.html">
 		hw0.html</a></td>
 	</tr>
 </table>
