--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
-
+﻿
 <h1 align="center"><font face="Bookman Old Style">410006146劉騰云</font>
 </h1>
 <h1 align="center"><font face="Bookman Old Style">Web3D作業</font></h1>
 <table border="1" width="100%">
 	<tr>
 		<td width="446">
-		<img border="0" src="images/UI4A46.jpg" width="435" height="246"></td>
+		<img border="0" src="images/UI4A46.jpg" width="auto" height="246"></td>
+		
 	</tr>
+	
 	<tr>
-		<td width="389">
+		<td width="auto">
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw0.html">
 		hw0.html</a></td>
+		
+		<td width="400">
+		<p align="center">
+		<a href="http://troylily.github.io/3D/hw1.html">
+		hw1.html</a></td>
 	</tr>
+	
 </table>
