--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<tr>
 		<td width="446">
 		<img border="0" src="images/UI4A46.jpg" width="auto" height="246"></td>
+		<td align="center">
+		<img border="0" src="gifs/hw1.gif" width="70%"></td>
+		<td align="center">
+		<img border="0" src="images/hw2.jpg" width="70%"></td>
 		
 	</tr>
 	
@@ -19,6 +23,11 @@
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw1.html">
 		hw1.html</a></td>
+		
+		<td width="389">
+		<p align="center">
+		<a href="http://troylily.github.io/3D/hw2.html">
+		hw2.html</a></td>
 	</tr>
 	
 </table>
