--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<img border="0" src="gifs/hw1.gif" width="70%"></td>
 		<td align="center">
 		<img border="0" src="images/hw2.jpg" width="70%"></td>
-		
+		<td align="center">
+		<img border="0" src="images/hw4.jpg" width="70%"></td>
 	</tr>
 	
 	<tr>
@@ -28,6 +29,11 @@
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw2.html">
 		hw2.html</a></td>
+		
+		<td width="389">
+		<p align="center">
+		<a href="http://troylily.github.io/3D/hw3.html">
+		hw3.html</a></td>
 	</tr>
 	
 </table>
