--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw2.html">
 		hw2.html</a></td>
+
 	</tr>
-	
+	<table border="1" width="100%">
+	<tr>
+		<td align="center">
+		<img border="1" src="gifs/hw4.jpg" width="70%" height="246"></td>
+	</tr>
+	<tr>
+		<td width="389">
+		<p align="center">
+		<a href="http://troylily.github.io/3D/hw4.html">
+		hw4.html</a></td>
+	</tr>
 </table>
