--- a/index.html
+++ b/index.html
@@ -36,4 +36,16 @@
 		hw3.html</a></td>
 	</tr>
 	
+	<tr>
+		<td width="389">
+		<p align="center">
+		<a href="http://troylily.github.io/3D/hw4.html">
+		hw4.html</a></td>
+	
+		<td width="389">
+		<p align="center">
+		<a href="http://troylily.github.io/3D/hw5.html">
+		hw5.html</a></td>
+	</tr>
+	
 </table>
