--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<img border="0" src="images/hw2.jpg" width="70%"></td>
 		<td align="center">
 		<img border="0" src="images/hw4.jpg" width="70%"></td>
+		<td align="center">
+		<img border="0" src="images/hw5.jpg" width="70%"></td>
 	</tr>
 	
 	<tr>
@@ -29,15 +31,6 @@
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw2.html">
 		hw2.html</a></td>
-<<<<<<< HEAD
-
-	</tr>
-	<table border="1" width="100%">
-	<tr>
-		<td align="center">
-		<img border="1" src="gifs/hw4.jpg" width="70%" height="246"></td>
-	</tr>
-=======
 		
 		<td width="389">
 		<p align="center">
@@ -45,19 +38,16 @@
 		hw3.html</a></td>
 	</tr>
 	
->>>>>>> master
 	<tr>
 		<td width="389">
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw4.html">
 		hw4.html</a></td>
-<<<<<<< HEAD
-=======
 	
 		<td width="389">
 		<p align="center">
 		<a href="http://troylily.github.io/3D/hw5.html">
 		hw5.html</a></td>
->>>>>>> master
 	</tr>
+	
 </table>
